--- a/css/sytles.css
+++ b/css/sytles.css
@@ -22,6 +22,7 @@
 html {
   box-sizing: border-box;
   font-size: 62.5%;
+  scroll-behavior: smooth;
 }
 *, *:before, *:after {
   box-sizing: inherit;
@@ -86,17 +87,18 @@ img{
     align-items: center;
     padding: 0 1rem;
     background-color: var(--primario);
-    margin: 0;
-    
+    margin:  0;
+    height: 15rem;
 }
 
 
 .barraNava li img{
-    width: 10rem;
+    width: 15rem;
 }
 
 .barraNava li{
     list-style: none;
+
 
 }
 
@@ -126,6 +128,13 @@ img{
     width: 30rem;
     line-height: 1;
 }
+
+/* Banner */
+
+.banner img{
+    width: 100%;
+}
+
 
 .perro{
     background-color: var(--citrus);
@@ -182,8 +191,100 @@ img{
 
 }
 
+.cards{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    margin-top: 5rem;
+    gap: 3rem;
+}
+
+.cards .card{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: 1px solid var(--grisClaro);
+    border-radius: 2rem;
+    padding: 2rem;
 
 
+}
+
+.banner-card{
+    background-image: url(../img/Banner\ 1.jpg);
+}
+
+/* Contacto */
+.padre{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
+}
+
+.contacto{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
+    padding: 5rem 0;
+}
+
+.contacto-texto{
+    display: flex;
+    flex-direction: column;
+}
+
+.contacto-texto h2{
+    color: var(--negro);
+}
+
+.contacto-texto p {
+    color: #1f1e1e;
+}
+
+.iconos{
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+    margin-bottom: 10px;
+
+}
+
+.iconos img{
+    width: 50px;
+    padding: 5px;
+    
+}
+
+
+
+
+/* Footer */
+
+
+
+footer{
+    display: flex;
+
+    background-color: #004450;
+    color: var(--blanco);
+}
+
+
+.logopat{
+    width: 200px;
+    height: 200px;
+}
+
+.redes-sociales{
+    display: flex;
+    justify-content: left;
+    margin-top: 20px;
+    
+}
+.redes-sociales img{
+    width: 50px;
+}
 
 
 
