--- a/css/sytles.css
+++ b/css/sytles.css
@@ -83,7 +83,7 @@ img{
 
 .barraNava{
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     padding: 0 1rem;
     background-color: var(--primario);
@@ -177,7 +177,7 @@ img{
 .categorias h3{
     text-align: center;
 }
-.categorias-imagenes img{
+.categorias-imagenes a{
     width: 16%;
     border: 1px solid var(--grisClaro);
     border-radius: 5rem;
