--- a/css/sytles.css
+++ b/css/sytles.css
@@ -117,6 +117,10 @@ img{
 
 }
 
+
+
+
+
 .tipo-mascota{
     display: flex;
     justify-content:space-evenly;
@@ -133,6 +137,7 @@ img{
     border-radius: 6rem;
     width: 30rem;
     line-height: 1;
+    box-shadow: 5px 5px 15px gray;
 }
 
 /* Banner */
@@ -188,20 +193,40 @@ img{
     border: 1px solid var(--grisClaro);
     border-radius: 5rem;
     padding: 1rem;
+    transition: background-color .3s ease-out ;
+    box-shadow: 5px 5px 15px gray;
 }
+
+.categorias-imagenes img{
+    border-radius: 5rem;
+}
+
+.categorias-imagenes a:hover{
+    background-color: #edcff0;
+}
+
+
+
+
+
 .categorias-imagenes{
 
     display: flex;
     justify-content: space-between;
     
-
 }
+
+.card{
+    box-shadow: 5px 5px 20px gray;
+}
+
 
 .cards{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     margin-top: 5rem;
     gap: 3rem;
+    
 }
 
 .cards .card{
