--- a/css/sytles.css
+++ b/css/sytles.css
@@ -20,12 +20,12 @@
 }
 
 html {
-  box-sizing: border-box;
-  font-size: 62.5%;
-  scroll-behavior: smooth;
+    box-sizing: border-box;
+    font-size: 62.5%;
+    scroll-behavior: smooth;
 }
 *, *:before, *:after {
-  box-sizing: inherit;
+    box-sizing: inherit;
 }
 
 body{
@@ -48,33 +48,33 @@ p, h3{
 }
 
 h1,h2,h3{
-  font-weight: 900;
-  font-family: var(--fuente-secundaria);
-  margin: 2.5rem;
+    font-weight: 900;
+    font-family: var(--fuente-secundaria);
+    margin: 2.5rem;
 }
 
 h1{
-  font-size: 4.4rem;
+    font-size: 4.4rem;
 }
 
 h2{
-  font-size: 3.6rem;
+    font-size: 3.6rem;
 }
 
 h3{
-  font-size: 2.8rem;
+    font-size: 2.8rem;
 }
 
 img{
-  max-width: 100%;
-  display: block;
+    max-width: 100%;
+    display: block;
 }
 
 
 /* Utilidades */
 
 .text-center{
-  text-align: center;
+    text-align: center;
 }
 
 
@@ -317,13 +317,29 @@ img{
 }
 
 
+/* Nosotros */
+
+.contenedor-nosotros{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    align-items: center;
+
+}
+
+.contenedor-nosotros p{
+    margin: 2rem 0;
+    width: 80%;
+}
+
+
+
 /* Footer */
 
 
 
 footer{
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     background-color: #004450;
     color: var(--blanco);
 }
