--- a/css/sytles.css
+++ b/css/sytles.css
@@ -103,6 +103,13 @@ img{
 
 .barraNava li{
     list-style: none;
+    transition: all 0.4s ease;
+}
+
+.barraNava li:hover{
+
+    -webkit-filter: grayscale(100%); /* Chrome, Safari, Opera */
+    filter: grayscale(100%);
 }
 
 .barraNava li a{
@@ -111,6 +118,16 @@ img{
     font-weight: 900;
     padding: 3rem;
     color: var(--blanco);
+}
+
+.barraNava li a:hover{
+    transform: scale(1.2);
+    color: #f2c331;
+}
+
+.barraNava li img:hover{
+    transform: scale(1.2);
+    color: #f2c331;
 }
 
 .tipo-mascota{
@@ -365,6 +382,16 @@ footer{
     justify-content: space-between;
     background-color: #004450;
     color: var(--blanco);
+}
+
+footer a{
+    color: var(--blanco);
+    text-decoration: none;
+}
+
+footer a:hover{
+    transform: scale(1.1);
+    color: var(--citrus);
 }
 
 .logopat{
