--- a/css/sytles.css
+++ b/css/sytles.css
@@ -99,12 +99,20 @@ img{
 
 .barraNava li img{
     width: 15rem;
+    transition: transform;
+    transition-duration: .3s;
 }
+
+.barraNava li img:hover{
+    transform: scale(1.2);
+}
+
 
 .barraNava li{
     list-style: none;
-    transition: all 0.4s ease;
+    transition-property: transform;
 }
+
 
 .barraNava li:hover{
 
@@ -125,10 +133,6 @@ img{
     color: #f2c331;
 }
 
-.barraNava li img:hover{
-    transform: scale(1.2);
-    color: #f2c331;
-}
 
 .tipo-mascota{
     display: flex;
